cambios en todo

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -10,13 +10,14 @@
     <title>detail-genres</title>
 </head>
 <body class="detalle_genero">
+
     <header>
         <form action="search-results.html" method="GET">
             <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
             <button type="submit">Buscar</button>
         </form>
         <div class="menu">
-            <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
+            <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="playlist.html">  Mi playlist  </a></p>
         </div>
     </header>
 
