--- a/detail_album.html
+++ b/detail_album.html
@@ -10,45 +10,48 @@
     <title>Album</title>
 </head>
 <body>
-
     <header>
-        <img width="50px" class="logo" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
-        <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
-</header>
+        <form action="search-results.html" method="GET">
+            <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
+            <button type="submit">Buscar</button>
+        </form>
+        <div class="menu">
+            <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="playlist.html">  Mi playlist  </a></p>
+        </div>
+    </header>
 
-<section class="album">
-    <h1 class="dom">Hopeless Fountain Kingdom</h1>
-</section>
+    <section class="album">
+        <h1 class="dom">Hopeless Fountain Kingdom</h1>
+    </section>
 
-<section class="artist">
-    <div class="imgartist">
-        <img width="500px" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
-
-    </div>
-    <div class="info">
-        <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
-        <h4 class="halsey">Género:<a class="hal" href="detail-genres.html"> Pop, R&B, synth-pop, electropop</a></h4>
-        <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
-        <h4 class="halsey">Lista de canciones:
-            <ul class="lista1">
-                <li class="top">The Prologue </li>
-                <li class="top">100 Letters</li>
-                <li class="top"><a class="hal" href="detail_track.html">Eyes Closed</a></li>
-                <li class="top">Alone</li>
-                <li class="top">Now Or Never</li>
-                <li class="top">Sorry</li>
-                <li class="top">Good Mourning</li>
-            </ul>
-            <ul class="lista2">
-                <li class="top">Lie</li>
-                <li class="top">Walls Could Talk</li>
-                <li class="top">Bad At Love</li>
-                <li class="top">Strangers</li>
-                <li class="top">Devil In Me</li>
-                <li class="top">Hopeless</li>
-            </ul>
-        </h4>
-    </div>
+    <section class="artist">
+         <div class="imgartist">
+            <img width="500px" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
+        </div>
+        <div class="info">
+            <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
+            <h4 class="halsey">Género:<a class="hal" href="detail-genres.html"> Pop, R&B, synth-pop, electropop</a></h4>
+            <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
+            <h4 class="halsey">Lista de canciones:
+                <ul class="lista1">
+                    <li class="top">The Prologue </li>
+                    <li class="top">100 Letters</li>
+                    <li class="top"><a class="hal" href="detail_track.html">Eyes Closed</a></li>
+                    <li class="top">Alone</li>
+                    <li class="top">Now Or Never</li>
+                    <li class="top">Sorry</li>
+                    <li class="top">Good Mourning</li>
+                </ul>
+                <ul class="lista2">
+                    <li class="top">Lie</li>
+                    <li class="top">Walls Could Talk</li>
+                    <li class="top">Bad At Love</li>
+                    <li class="top">Strangers</li>
+                    <li class="top">Devil In Me</li>
+                    <li class="top">Hopeless</li>
+                </ul>
+            </h4>
+        </div>
 </section>
 
 <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
