--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button type="submit">Buscar</button>
             </form>
             <div class="menu">
-                <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
+                <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="playlist.html">  Mi playlist  </a></p>
             </div>
         </header>
 
