--- a/playlist.html
+++ b/playlist.html
@@ -7,9 +7,23 @@
     <link rel="stylesheet" href= "css/playlist-style.css">
     <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css>
     <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href= "css/playlist-style.css">
     <title>Playlist</title>
 </head>
-<body>
+<body class="play">
+
+    <header>
+        <form action="search-results.html" method="GET">
+            <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
+            <button type="submit">Buscar</button>
+        </form>
+        <div class="menu">
+            <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="playlist.html">  Mi playlist  </a></p>
+        </div>
+    </header>
+
     <div class="music-container">
     <div class="music-header">
         <i class="fa fa-angle-left"></i>
@@ -44,5 +58,8 @@
         </div>    
     </div>
     </div>
+    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
+        Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+    </footer>
 </body>
 </html>
