agregue las fotos a playlist

--- a/playlist.html
+++ b/playlist.html
@@ -56,7 +56,47 @@
                 <p>Single Music Name and Director</p>
              </div>
              <i class="fa fa-ellipsis-v"></i>
-        </div>    
+        </div>   
+        <div class="music-info">
+            <div class="music-img">
+                <img src="img/detalle.genero.theweeknd.jpg" width="100px">
+             </div>
+             <div class="music-name">
+                <h6>Single Song Title</h6>
+                <p>Single Music Name and Director</p>
+             </div>
+             <i class="fa fa-ellipsis-v"></i>
+        </div>
+        <div class="music-info">
+            <div class="music-img">
+                <img src="img/detalle.genero.taylor.jpg" width="100px">
+             </div>
+             <div class="music-name">
+                <h6>Single Song Title</h6>
+                <p>Single Music Name and Director</p>
+             </div>
+             <i class="fa fa-ellipsis-v"></i>
+        </div>
+        <div class="music-info">
+            <div class="music-img">
+                <img src="img/detalle.genero.artista.dua.jpg" width="100px">
+             </div>
+             <div class="music-name">
+                <h6>Single Song Title</h6>
+                <p>Single Music Name and Director</p>
+             </div>
+             <i class="fa fa-ellipsis-v"></i>
+        </div>
+        <div class="music-info">
+            <div class="music-img">
+                <img src="img/detalle.genero.ariana.jpg" width="100px">
+             </div>
+             <div class="music-name">
+                <h6>Single Song Title</h6>
+                <p>Single Music Name and Director</p>
+             </div>
+             <i class="fa fa-ellipsis-v"></i>
+        </div> 
     </div>
     </section>
     <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
