--- a/genres.html
+++ b/genres.html
@@ -16,9 +16,12 @@
             <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
             <button type="submit">Buscar</button>
         </form>
-        <div class="menu">
-            <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="playlist.html">  Mi playlist  </a></p>
-        </div>
+        <ul class="menu">
+            <li> <a class="pre" href="index.html">  Home  </a></li>
+            <li><a class="pre"  href="genres.html">  Géneros  </a></li>
+            <li><a  class="pre" href="playlist.html">  Mi playlist  </a></li>
+            <li class="logo"><img width="40px" src="../proyecto_integrador/img/logo.hurrian.blanco.png" alt="Logo"></li>
+        </ul>
     </header>
 
     <h1 class="generos">Encontrá el género que más te guste</h1>
