--- a/search-results.html
+++ b/search-results.html
@@ -7,6 +7,36 @@
     <title>Resultados de búsqueda</title>
 </head>
 <body>
-    
+
+    <section>
+        <h1 class="search">Resultado de búsqueda.</h1>
+    </section>
+
+    <section>
+        <h3 class="result1">"Dua Lipa"</h3>
+        <h4 class="result0"> <a class="result2" href="detail_artist.html"> Ver: Dua Lipa</a></h4>
+        <h4 class="result0"> <a class="result2" href="detail_album.html"> Album: Future Nostalgia</a></h4>
+        <h4 class="result0"> <a class="result2" href="detail-genres.html"> Ver: Género Pop</a></h4>
+    </section>
+
+    <section>
+        <h3 class="result1">"Musica pop"</h3>
+        <h4 class="result0"> <a class="result2" href="detail-genres.html"> Ver: Género Pop</a></h4>
+        <h4 class="result0"> <a class="result2" href="genres.html"> Ver: Géneros</a></h4>
+    </section>
+
+    <section>
+        <h3 class="result1">"Hopeless Fountain Kingdom"</h3>
+        <h4 class="result0"> <a class="result2" href="detail-genres.html"> Ver: Genero Pop</a></h4>
+        <h4 class="result0"> <a class="result2" href="detail_album.html">Album: Hopeless Fountain Kingdom</a></h4>
+        <h4 class="result0"> <a class="result2" href="detail_artist.html">Artista: Halsey</a></h4>
+        <h4 class="result0"> <a class="result2" href="detail_track.html">Cancion: Eyes Closed</a></h4>
+    </section>
+
+    <section>
+        <h3 class="result1">"Tutorial de maquillaje"</h3>
+        <h4 class="result0">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h4>
+    </section>
+
 </body>
 </html>
