cambios en album

--- a/detail_album.html
+++ b/detail_album.html
@@ -10,7 +10,7 @@
     <title>Album</title>
 </head>
 <body>
-    
+
     <header>
         <form action="search-results.html" method="GET">
             <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
@@ -38,21 +38,19 @@
             <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
             <h4 class="halsey">Lista de canciones:
                 <ul class="lista1">
-                    <li class="top">The Prologue </li>
-                    <li class="top">100 Letters</li>
+                    <li class="top"><a class="hal" href="detail_track.html">The Prologue </a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">100 Letters</a></li>
                     <li class="top"><a class="hal" href="detail_track.html">Eyes Closed</a></li>
-                    <li class="top">Alone</li>
-                    <li class="top">Now Or Never</li>
-                    <li class="top">Sorry</li>
-                    <li class="top">Good Mourning</li>
-                </ul>
-                <ul class="lista2">
-                    <li class="top">Lie</li>
-                    <li class="top">Walls Could Talk</li>
-                    <li class="top">Bad At Love</li>
-                    <li class="top">Strangers</li>
-                    <li class="top">Devil In Me</li>
-                    <li class="top">Hopeless</li>
+                    <li class="top"><a class="hal" href="detail_track.html">Alone</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Now Or Never</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Sorry</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Good Mourning</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Lie</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Walls Could Talk</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Bad At Love</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Strangers</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Devil In Me</a></li>
+                    <li class="top"><a class="hal" href="detail_track.html">Hopeless</a></li>
                 </ul>
             </h4>
         </div>
