--- a/index.html
+++ b/index.html
@@ -32,16 +32,11 @@
 
         <h1 class="title_home">Canciones recomendadas para vos</h1>
         <section class="track_home_conteiner">
-            <div class="track_home">
-                <div class="track_home_img">
-
+            <article class="track_home">
                      <a href="detail_track.html"><img width="225px" src="./img/eyesclosedcancion.jpg" alt="Helsey track"></a>
-                     <a href="detail_artist.html"><h4>Halsey</h4></a>
-                     <a href="detail_track.html"><h3>Eyes Closed</h3></a>
-             
-                </div>
-    
-            </div>
+                     <h4><a href="detail_artist.html">Halsey</a></h4>
+                     <h3><a href="detail_track.html">Eyes Closed</a></h3>
+            </article>
 
             <div class="track_home">
                 <div class="track_home_img">
