--- a/playlist.html
+++ b/playlist.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href= "css/playlist-style.css">
     <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css>
     <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href= "css/playlist-style.css">
+    <link rel="stylesheet" href= "css/styles.css">
     <title>Playlist</title>
 </head>
 <body class="play">
@@ -28,29 +27,9 @@
     </header>
 
     <section class="music-container">
-    <div class="music-header">
-        <i class="fa fa-angle-left"></i>
-    <article class="title">
-        <p>
-        Playlist
-        </p>
-        <i class="fa fa-search"></i>
-    </article>
-    </div>
-    <aside class="music-playlist">
-    <div class="music-menu text-center">
-        <div class="manu">
-            <ul>
-                <li><a href= "#">Song</a></li>
-                <li><a href= "#">Album</a></li>
-                <li><a href= "#">Artist</a></li>
-                <li><a href= "#">Genres</a></li>
-            </ul>
-        </div>
-    </div>
-    </aside>
-    <div class="music-box">
-        <div class="music-info">
+        <h1>Playlist</h1>
+    <div class="track_home_conteiner">
+        <div class="track_home">
             <div class="music-img">
                 <img src="img/Album.cover.halsey.jpg" width="100px">
              </div>
@@ -60,17 +39,17 @@
              </div>
              <i class="fa fa-ellipsis-v"></i>
         </div>   
-        <div class="music-info">
+        <div class="track_home">
             <div class="music-img">
-                <img src="img/detalle.genero.theweeknd.jpg" width="100px">
+                <img src="img/detalle.genero.theweekend.jpg" width="100px">
              </div>
-             <div class="music-name">
+             <div class="track_name">
                 <h6>Single Song Title</h6>
                 <p>Single Music Name and Director</p>
              </div>
              <i class="fa fa-ellipsis-v"></i>
         </div>
-        <div class="music-info">
+        <div class="track_home">
             <div class="music-img">
                 <img src="img/detalle.genero.taylor.jpg" width="100px">
              </div>
@@ -80,7 +59,7 @@
              </div>
              <i class="fa fa-ellipsis-v"></i>
         </div>
-        <div class="music-info">
+        <div class="track_home">
             <div class="music-img">
                 <img src="img/detalle.genero.artista.dua.jpg" width="100px">
              </div>
@@ -90,7 +69,7 @@
              </div>
              <i class="fa fa-ellipsis-v"></i>
         </div>
-        <div class="music-info">
+        <div class="track_home">
             <div class="music-img">
                 <img src="img/detalle.genero.ariana.jpg" width="100px">
              </div>
