agregue titulo a playlist

--- a/playlist.html
+++ b/playlist.html
@@ -27,11 +27,11 @@
     </header>
 
     <section class="music-container">
-        <h1>Playlist</h1>
+       <h1 class="titulo-playlist">Mi Playlist</h1>
     <div class="track_home_conteiner">
         <div class="track_home">
             <div class="music-img">
-                <img src="img/Album.cover.halsey.jpg" width="100px">
+                <img src="img/Album.cover.halsey.jpg" width="200px">
              </div>
              <div class="music-name">
                 <h6>Single Song Title</h6>
@@ -41,7 +41,7 @@
         </div>   
         <div class="track_home">
             <div class="music-img">
-                <img src="img/detalle.genero.theweekend.jpg" width="100px">
+                <img src="img/detalle.genero.theweekend.jpg" width="200px">
              </div>
              <div class="track_name">
                 <h6>Single Song Title</h6>
@@ -51,7 +51,7 @@
         </div>
         <div class="track_home">
             <div class="music-img">
-                <img src="img/detalle.genero.taylor.jpg" width="100px">
+                <img src="img/detalle.genero.taylor.jpg" width="200px">
              </div>
              <div class="music-name">
                 <h6>Single Song Title</h6>
@@ -61,7 +61,7 @@
         </div>
         <div class="track_home">
             <div class="music-img">
-                <img src="img/detalle.genero.artista.dua.jpg" width="100px">
+                <img src="img/detalle.genero.artista.dua.jpg" width="200px">
              </div>
              <div class="music-name">
                 <h6>Single Song Title</h6>
@@ -71,7 +71,7 @@
         </div>
         <div class="track_home">
             <div class="music-img">
-                <img src="img/detalle.genero.ariana.jpg" width="100px">
+                <img src="img/detalle.genero.ariana.jpg" width="200px">
              </div>
              <div class="music-name">
                 <h6>Single Song Title</h6>
@@ -82,7 +82,7 @@
     </div>
     </section>
     <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
-        Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+        Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
     </footer>
 </body>
 </html>
