agregue los botones de playlist

--- a/playlist.html
+++ b/playlist.html
@@ -80,6 +80,29 @@
              <i class="fa fa-ellipsis-v"></i>
         </div> 
     </div>
+    <div class= "music-play">
+        <div class="play-img">
+            <img src="img/Album.cover.halsey.jpg">
+        </div>
+        <div class= "play-controlers">
+            <div class="controls">
+                <div class="song-name">
+                    <h5>Without Me</h5>
+                    <p>Halsey</p>
+                </div>
+                <div class="play-icon">
+                    <i class="fa fa-step-backward"></i>
+                    <i class="fa fa-play"></i>
+                    <i class="fa fa-step-forward"></i>
+                </div>
+            </div>
+            <div class="music-progress">
+            <div class="progress">
+            <div class="progress-bar"></div>    
+            </div>
+            </div>
+        </div>
+    </div>
     </section>
     <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
         Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
