empezando con los media queries

--- a/detail_album.html
+++ b/detail_album.html
@@ -30,7 +30,7 @@
 
     <section class="artist">
          <div class="imgartist">
-            <img width="500px" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
+            <img width="400px"  class="detalle" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
         </div>
         <div class="info">
             <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
