--- a/detail_artist.html
+++ b/detail_artist.html
@@ -30,7 +30,7 @@
     
     <section class="artist">
         <div class="imgartist">
-            <img width="400px" src="../proyecto_integrador/img/halsey.jpg" alt="Halsey">
+            <img width="400px" class="detalle"  src="../proyecto_integrador/img/halsey.jpg" alt="Halsey">
         </div>
         <div class="contenido">
             <h4 class="she2">Nombre completo: Ashley Nicolette Frangipane, más conocida como Halsey.</h4>
