--- a/detail_track.html
+++ b/detail_track.html
@@ -30,7 +30,7 @@
 
         <section class="track">
             <div class="img">
-                <img width="400px"   src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Halsey Album Cover">
+                <img width="400px"  class="detalle"   src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Halsey Album Cover">
             </div>
             <div class="sey">
                 <h4 class="halsey">Artista: <a class="hal" href="detail_artist.html">Halsey</a></h4>
