media queries tablets de detalle artista album cancion

--- a/detail_album.html
+++ b/detail_album.html
@@ -36,7 +36,7 @@
             <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
             <h4 class="halsey">Género:<a class="hal" href="detail-genres.html"> Pop, R&B, synth-pop, electropop</a></h4>
             <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
-            <h4 class="halsey">Lista de canciones:
+            <h4 class="lista2" class="lista2">Lista de canciones:
                 <ul class="lista1">
                     <li class="top"><a class="hal" href="detail_track.html">The Prologue </a></li>
                     <li class="top"><a class="hal" href="detail_track.html">100 Letters</a></li>
