--- a/search-results.html
+++ b/search-results.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../proyecto_integrador/css/styles.css">
     <title>Resultados de búsqueda</title>
 </head>
 <body>
+
+    <header>
+        <form action="search-results.html" method="GET">
+            <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
+            <button type="submit">Buscar</button>
+        </form>
+        <ul class="menu">
+            <li> <a class="pre" href="index.html">  Home  </a></li>
+            <li><a class="pre"  href="genres.html">  Géneros  </a></li>
+            <li><a  class="pre" href="playlist.html">  Mi playlist  </a></li>
+            <li class="logo"><img width="40px" src="../proyecto_integrador/img/logo.hurrian.blanco.png" alt="Logo"></li>
+        </ul>
+    </header>
 
     <section>
         <h1 class="search">Resultado de búsqueda.</h1>
@@ -37,6 +53,10 @@
         <h3 class="result1">"Tutorial de maquillaje"</h3>
         <h4 class="result0">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h4>
     </section>
+
+    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
+        Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+    </footer>
 
 </body>
 </html>
