--- a/detail-genres.html
+++ b/detail-genres.html
@@ -58,7 +58,7 @@
                 <h3><a href="detail_album.html">After Hours</a></h3>
             </article> 
 
-            <article class="album_track_home">
+            <article class="album_track_home last-item">
 			    <a href="detail_album.html"><img width="225" src="./img/Taylor.Swift.evermore.jpg" alt="album imagen"></a>
                 <h5><a href="detail_artist.html">Taylor Swift</a></h5>
                 <h3><a href="detail_album.html">Evermore</a></h3>
@@ -92,7 +92,7 @@
             <h3><a href="detail_track.html">Blinding Lights</a></h3>
         </article>
         
-        <article class="track_home">
+        <article class="track_home last-item">
             <a href="detail_track.html"><img width="225px" src="./img/detalle.genero.ladygaga.jpg" alt="Rain on me track"></a>
             <h5><a href="detail_artist.html">Lady Gaga</a> </h5>
             <h3><a href="detail_track.html">Rain on me</a></h3>
@@ -126,7 +126,7 @@
                 <h4><a href="detail_artist.html">The Weeknd</a></h4>
             </article>  
 
-            <article class="artistas_home">
+            <article class="artistas_home last-item">
                 <a href="detail_artist.html"><img src="./img/detalle.genero.taylor.jpg" alt="artista imagen"></a> 
                 <h4><a href="detail_artist.html">Taylor Swift</a> </h4>
              </article>
